Start reporting watch time if ABR adapts above 200p.

Previously we only checked the initial resolution and assumed it
was always large enough to start watch time reporting; clearly
this is not true since YouTube offers a 140p format.

Probably we also want to drop the minimum resolution to 200x140p,
which I'll check with product about and handle in a followup CL.

BUG=711792
TEST=new tests. Manual: force 140p, adapt above, verify watch time.

Review-Url: https://codereview.chromium.org/2822543006
Cr-Commit-Position: refs/heads/master@{#464826}

Former-commit-id: 2540556a43a467a11d4c2cffdb9457b97d8b94c4